rendered/envs/alpha/vmks/ingressroute-vmselect-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmselect-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`vmselect.lan.zebradil.dev`) || Host(`vmselect.junior.lan.zebradil.dev`)
      services:
        - name: vmselect-vmks-long
          port: http
